# pandas-to-pydantic

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-package.yml  test-package.yml
src/pandas_to_pydantic/: __about__.py  __init__.py  annotation_utils.py  dataframeSerializer.py  to_pydantic.py
tests/: config.py  test_annotation_utils.py  test_cases.py  test_serialize.py  test_to_pydantic.py
tests/data/: bookData.csv  parent_child_types.py
tests/data/library_data/: library_data.json  library_types.py  multilist_detail_library.json  multilist_library.json  nested_library.json
tests/data/parent_child/: parent_child_model_columns.py  parent_child_types.py
tests/testData/: libraryData.csv  libraryTypes.py
